--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div class="colton">
               <div class="profile">
                 <img src="images/image-colton.jpg" alt="colton-img">
-                <p class="name">Colton Smith</p>
-                <p class="verified">Verified Buyer</p>
+                <p>Colton Smith</p>
+                <p>Verified Buyer</p>
               </div>
               <div class="quote">
                 <p>"We needed the same printed design as the one we had ordered a week prior.
@@ -75,8 +75,8 @@
             <div class="irene">
               <div class="profile">
                 <img src="images/image-irene.jpg" alt="irene-img">
-                <p class="name">Irene Roberts</p>
-                <p class="verified">Verified Buyer</p>
+                <p>Irene Roberts</p>
+                <p>Verified Buyer</p>
               </div>
               <div class="quote">
                 <p>"Customer service is always excellent and very quick turn around. Completely
@@ -86,8 +86,8 @@
             <div class="anne">
               <div class="profile">
                 <img src="images/image-anne.jpg" alt="anne-img">
-                <p class="name">Anne Wallace</p>
-                <p class="verified">Verified Buyer</p>
+                <p>Anne Wallace</p>
+                <p>Verified Buyer</p>
               </div>
               <div class="quote">
                 <p>"Put an order with this company and can only praise them for the very high
