--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <main>
-        <section class="intro">
-          <div class="upper-half">
+        <section class="upper-half">
+          <div class="intro">
             <div class="intro-message">
               <h1>10,000+ of our users love our products.</h1>
               <p>We only provide great products combined with excellent customer service.
@@ -63,8 +63,10 @@
             <div class="colton">
               <div class="profile">
                 <img src="images/image-colton.jpg" alt="colton-img">
-                <p>Colton Smith</p>
-                <p>Verified Buyer</p>
+                <div class="profile-details">
+                    <p>Colton Smith</p>
+                    <p>Verified Buyer</p>
+                </div>
               </div>
               <div class="quote">
                 <p>"We needed the same printed design as the one we had ordered a week prior.
@@ -75,8 +77,10 @@
             <div class="irene">
               <div class="profile">
                 <img src="images/image-irene.jpg" alt="irene-img">
-                <p>Irene Roberts</p>
-                <p>Verified Buyer</p>
+                <div class="profile-details">
+                    <p>Irene Roberts</p>
+                    <p>Verified Buyer</p>
+                </div>
               </div>
               <div class="quote">
                 <p>"Customer service is always excellent and very quick turn around. Completely
@@ -86,8 +90,10 @@
             <div class="anne">
               <div class="profile">
                 <img src="images/image-anne.jpg" alt="anne-img">
-                <p>Anne Wallace</p>
-                <p>Verified Buyer</p>
+                <div class="profile-details">
+                    <p>Anne Wallace</p>
+                    <p>Verified Buyer</p>
+                </div>
               </div>
               <div class="quote">
                 <p>"Put an order with this company and can only praise them for the very high
